# testgit

./: .gitattributes  pyproject.toml
QUANTAXIS/QAARP/: QAAccount.py  QAAccountPro.py  QAPortfolio.py  QARisk.py  QAStrategy.py  QAUser.py  __init__.py  market_preset.py
QUANTAXIS/QAAnalysis/: QAAnalysis_account.py  QAAnalysis_block.py  QAAnalysis_dataframe.py  QAAnalysis_machinelearning.py  QAAnalysis_series.py  QAAnalysis_signal.py  QAAnalysis_tick.py  QAAnalysis_trade.py  __init__.py
QUANTAXIS/QAApplication/: QAAnalysis.py  QABacktest.py  QAResult.py  QAT0Backtest.py  QATradeRealtime.py  backtest_setting.py
QUANTAXIS/QACmd/: __init__.py  runner.py
QUANTAXIS/QAData/: QABlockStruct.py  QADataStruct.py  QAIndicatorStruct.py  QASeriesStruct.py  __init__.py  base_datastruct.py  data_fq.py  data_marketvalue.py  data_resample.py  dsmethods.py  financial_mean.py
QUANTAXIS/QAEngine/: QAAsyncSchedule.py  QAAsyncTask.py  QAAsyncThread.py  QAEvent.py  QAThreadEngine.py
QUANTAXIS/QAExecutor/: QAExecutor.py
QUANTAXIS/QAFactor/: __init__.py  analyze.py  data.py  fetcher.py  localize.py  performance.py  plotting_utils.py  preprocess.py  process.py  tears.py  utils.py
QUANTAXIS/QAFetch/: Fetcher.py  QABitfinex.py  QABitmex.py  QACrawler.py  QAEastMoney.py  QAHexun.py  QAJQdata.py  QAOKEx.py  QAQAWEB.py  QAQuery.py  QAQuery_Advance.py  QAQuery_Async.py  QASina.py  QATdx.py  QATdx_adv.py  QAThs.py  QATradeFile.py  QATushare.py  QAWind.py  QAbinance.py  QAfinancial.py  QAhuobi.py  QAhuobi_realtime.py  __init__.py  base.py  data_list.py  realtime.py
QUANTAXIS/QAIndicator/: base.py  hurst.py  indicators.py  talib_indicators.py  talib_numpy.py  talib_series.py
QUANTAXIS/QAMarket/: QABacktestBroker.py  QABroker.py  QADealer.py  QAMarket.py  QAOrder.py  QAOrderHandler.py  QAOrderHandler_async.py  QAPosition.py  QAShipaneBroker.py  QASimulatedBroker.py  QATTSBroker.py  QATrade.py  common.py  shipaneclient.py
QUANTAXIS/QASU/: save_account.py  save_backtest.py  save_binance.py  save_bitfinex.py  save_bitmex.py  save_financialfiles.py  save_gm.py  save_huobi.py  save_jq.py  save_okex.py  save_orderhandler.py  save_strategy.py  save_tdx.py  save_tdx_file.py  save_tdx_parallelism.py  trans_gm.py  (+5 more)
(+31 files in other folders)
